--- a/website/docs/docs/dbt-cloud/dbt-cloud-api/metadata/schema/schema-metadata-model.mdx
+++ b/website/docs/docs/dbt-cloud/dbt-cloud-api/metadata/schema/schema-metadata-model.mdx
@@ -56,6 +56,27 @@ The example query below could be useful if we wanted to understand information a
 }
 ```
 
+#### Column-level information
+
+The example query below could be useful if we wanted to understand more information about the columns of a given model.  Note that this will only work if the job generated documentation (for example, with command 'dbt docs generate').
+
+```graphql
+{
+  model(jobId: 123, uniqueId: "model.jaffle_shop.dim_user")  {
+    columns{
+      name
+      index
+      type
+      comment
+      description
+      tags
+      meta
+    }
+  }
+}
+```
+
+
 ### Fields
 When querying for a `model`, the following fields are available:
 
